Initial overline for the report

--- a/report/reporte.tex
+++ b/report/reporte.tex
@@ -13,11 +13,32 @@
 \newcommand{\jcimage}[3]{\begin{figure}[h!]\centering\includegraphics[width=#1\textwidth]{#2}\caption{#3}\end{figure}\vskip10pt}
 
 \author{Héctor Enrique Gómez Morales}
-\title{Reporte de Actividades Servicio Social}
+\title{
+  Analisis y mejoras en el procesamiento de imagenes obtenidas por Resonancia Magnetica Funcional: Resting State, Contraste BOLD. }
 \date{27 de Marzo de 2015}
 \begin{document}
 \maketitle
 \section{Introducción}
+
+\section{Resonancia Magnetica Funcional}
+
+\section{Contraste BOLD}
+
+\section{Resting State}
+
+\section{Objetivos}
+
+\section{Entornos de Desarrollo y Procesamiento}
+
+\section{FSL}
+
+\section{AFNI}
+
+\section{FCON1000}
+
+\section{CPAC}
+
+\section{MELODIC}
 
 \section{Conclusiones}
 
