--- a/report/reporte.tex
+++ b/report/reporte.tex
@@ -1,3 +1,4 @@
+
 \documentclass{article}
 \usepackage[left=2cm,right=2cm,top=3cm,bottom=3cm,letterpaper]{geometry}
 \usepackage[spanish]{babel}
@@ -15,31 +16,122 @@
 \author{Héctor Enrique Gómez Morales}
 \title{
   Analisis y mejoras en el procesamiento de imagenes obtenidas por Resonancia Magnetica Funcional: Resting State, Contraste BOLD. }
-\date{27 de Marzo de 2015}
+\date{20 de mayo de 2015}
 \begin{document}
 \maketitle
 \section{Introducción}
 
 \section{Resonancia Magnetica Funcional}
+La Resonancia Magnética Funcional (\textbf{RMf}) es una técnica de neuroimagen que permite registrar la actividad cerebral en vivo. Es una herramienta segura ya que no e invasiva, por lo que se pueden repertir los estudios en un paciente de manera periódica. Provee una resolución espacial lo que la ha convertido en una técnica de neuroimagen por excelencia. La \textbf{RMf} es una técnica eficaz para investigar relaciones entre estructura y función cerebral, tanto en sujetos sanos como en sujetos con patologías (Ríos-Lago, 2008)
+
+La RMf tiene muchas aplicaciones, Ríos-Lago (2008) sintetiza algunas, entre las que se encuentran:
+
+\begin{itemize}
+\item Localizacion de procesos cognitivos, ya sea para la investigación de la organización, funcional cerebral, o para la planificación de una cirugía
+\item Caracterización de respuestas y función de áreas cerebrales
+\item Identificar funcionamiento irregular del cerebro
+\item Monitorear el efecto de un tratamiento, sobre todo farmacológico en determinadas regiones del cerebro
+\end{itemize}
 
 \section{Contraste BOLD}
+La \textbf{RMf} se basa en el efecto \textbf{BOLD} (blood oxigenation level dependent) en el que se utilizan como constraste endógeno de la oxihemoglobina y la deoxihemoglobina por sus propiedades magnéticas, con esto se pueden detectar cambios en el flujo sanguineo cerebral (Ogawa et al 1990, citado en Ríos-Lago, 2008).
 
+La deoxihemoglobina provoa una alteración en el campo magnético disminuyendo levemente la señal en $T2^*$. Por su parte la oxihemoglobina por su propiedad diamagnética no genera efectos sobre la señal $T2^*$. Esas diferencias se pueden detectar al cotejar las imágenes gracias a métodos estadísticos y software especializado. Con este procedimiento se generan \texttt{mapas de activación} quese superponen a imágenes de alta resolución obtenidos por un resonador magnetico.
 \section{Resting State}
 
-\section{Objetivos}
+\section{Objetivos Generales}
 
-\section{Entornos de Desarrollo y Procesamiento}
+Ayudar en el analsis de datos que han sido obtenidos de \textbf{MRf}, para detectar correlaciones entre la activacion cerebral y la tarea que realiza el sujeto de estudio durante el escaneo.
 
-\section{FSL}
+Dado que la firma de activacion obtenido por contraste BOLD es relativamente debil es necesario realizar una serie de pasos de procesamiento a las imagenes obtenidas para eliminar ruido en los datos adquiridos.
 
-\section{AFNI}
+\section{Entorno de Desarrollo}
 
-\section{FCON1000}
+En el proceso actual de procesamiento y analisis de datos dentro del Instituto se hace el uso principalmente de FSL y AFNI . Con estas bibliotecas se hace la mayoria de las tareas de procesamiento y analisis.
 
-\section{CPAC}
+\subsection{FSL}
 
-\section{MELODIC}
+FSL es una biblioteca muy completa de herramientas de análisis para \textbf{RMf} y datos de imágenes cerebrales
+\textbf{DTI}. La mayoria de los programas de analisis pueden ser usados ya sea por linea de comandos o por interface grafica (\texttt{GUI}).
+
+\subsection{AFNI}
+
+AFNI (Analysis of Functional NeuroImages)es un conjunto de programas hechos en C para el procesamiento, analisis y despliegue de datos para \textbf{RMf}
+
+\subsection{Problematica con el  proceso actual}
+El tiempo para instalar y tener un ambiente de desarrollo es una tarea ardua y propenso a errores de instalacion o configuracion. Por lo que una de las tareas a realizar fue la automatizacion de la instalacion del entorno de desarrollo.
+
+\section{Automatizacion instalacion entorno de desarrollo}
+En primera instancia se tuvo la propuesta de hacer un script de linea de comandos (Bash) para realizar la descarga, instalacion y configuracion de los paquetes que se necesitan principalemente FSL y AFNI. Se vio que esta forma de abordar el problema no era la mejor dado que el script debia correr en al menos en tres sistemas operativos: Windows, OS X y Linux. Linux era necesario porque el procesamiento es realizado en servidores que tienen instalado distribuciones como Fedora o Ubuntu, mientras las estaciones de trabajo cuentan con Windows o Linux con algunas personas haciendo uso de OS X.
+
+El soportar tres sistemas operativos con un rango amplio de versiones para cada una haria que la creacion y mantenimiento posterio del script de instalacion del entorno de desarrollo fuera muy complejo y tomara mucho tiempo.
+
+Se vio que hacer uso de una maquina virtual para contener el entorno de desarrollo era lo ideal por lo siguiente:
+
+\begin{itemize}
+\item Se estandariza a un solo sistema operativo para el manejo de las bibliotecas,
+  lo que facilita el soporte y entrenamiento.
+\item El entorno de trabajo esta aislado del sistema base lo que hace mas dificil que haya errores por
+  programas externos al procesamiento o analisis de datos.
+\item Hace uniforme el flujo de trabajo y su documentacion dado que las instucciones se pueden simplificar
+  dado que no se tiene que tener en cuenta que se tienen que soportar varios sistemas operativos.
+\item Se puede compartir la maquina virtual por lo que se facilita el intercambio de datos y la resolucion de problemas.
+\end{itemize}
+
+\subsection{Virtualbox y Vagrant}
+
+Descripcion de virtualbox y de vagrant
+
+Creacion de scripts de instalacion
+
+\section{Tratamiento de la imagen}
+
+Lo que se busca durante un estudio que hace uso de \textbf{RMf} es usar las imagenes cerebrales para buscar diferencias entre grupos. Primeramente  se hace una normalizacion de las imagenes, que consiste en ajustar la posicion, la orientacion y el tamaño de cada cerebro con un cerebro individual con un cerebro de referencia (tambien llamado template).
+
+Dependiendo del estudio tambien se puede realizar segmentacion en las imagenes en donde se identifica y extrae los tejidos de cada volumen.
+
+Tambien se tiene la suavizacion que es un filtrado que suaviza los contornos de la imagen esto es para compensar diferencias anatomicas que no han superado la normalizacion, eliminar ruido, y facilitar el analisis estadistico.
+
+\section{Herramientas para procesamiento y analisis de datos}
+
+\subsection{FCON1000}
+
+FCON1000 son un conjunto de scripts de linea de comando (Bash) que hacen uso de AFNI y FSL para realizar el procesamiento de imagenes cerebrales y asi producir bases de datos de neuroimagen de estado de reposo.
+
+El conjunto de scripts solo esta pensado para correr en ambientes UNIX dado que son Bash scripts, aparte que tiene como dependencias las bibliotecas AFNI y FSL.
+
+Los scripts presentan dos grandes desventajas:
+
+\begin{itemize}
+\item{Necesita una organizacion de archivos en especifico para que se pueda realizar el procesamiento, lo cual puede involucrar mas tiempo de desarrollo}
+  \item{Hacer cambios de parametros casi siempre requiere modificacion de los scripts lo que lleva a hacer dificil el realizar pruebas}
+\end{itemize}
+
+\subsection{CPAC}
+
+Es la evolucion de FCON, es un framwork que permite configurar y automatizar la creacion de cadenas de procesamiento datos de resting state obtenidos por \textbf{RMf}.
+Su objetivo es permitir la creacion de flujos de procesamiento sin necesitar que el usuario sepa programar, al contrario de los scripts FCON1000 en que se necesitaba conocimiento de Bash y de UNIX para crear o extender un flujo de procesamiento.
+
+CPAC presenta varias ventajas con respecto a FCON1000:
+\begin{itemize}
+\item Se puede configurar para aceptar cualquier tipo
+  de organizacion de directorios
+\item{Permite configurar y salvar los cambios en los parametros que se utilizan durante el procesamiento}
+\item{Uso de intefase grafica para configurar los parametros que se usaran en las etapas de procesamiento}
+\end{itemize}
+
+Aunque CPAC es un gran avance con respecto a FCON1000 tiene sus desventajas dado que aunque es muy facil configurar las etapas que ya se tienen contempladas para la mayoria de los estudios como la normalizacion, suavizacion, etc, el agregar nuevas etapas o la utilizacion de nuevos programas o tecnicas requieren tener conocmiento del lenguaje de programacion Python dado que CPAC esta implementado en este lenguaje. Es decir si CPAC tiene los programas y etapas que uno necesita ya definidos es muy buena opcion pero si no implica un esfuerzo mayor dado que se tiene que programar los nuevos modulos.
+
+\subsection{MELODIC}
+
+MELODIC (Multivariate Exploratory Linear Optimized Decomposition into Independent Components) es una tecnica que usa Analsis de Componentes Independientes para descomponer una o multiples conjuntos de datos en una serie de componentes espaciales y temporales.
 
 \section{Conclusiones}
+
+Se logro automatizar la instalacion del ambiente de trabajo teniendo en cuenta las necesidades del Departamenteo de Imágenes Cerebrales. Ahora se puede tener un entorno de desarrollo totalmente funcional y listo para ser usado en pocas horas sin requerir atencion del usuario. Esto ademas permite el poder experimentar mas facilmente con nuevas herramientas, bibliotecas y programas dado que se puede reinstalar rapidamente el ambiente.
+
+Tamebin se logro analizar alternativas al uso del script FCON1000, donde se ve que CPAC es el sucesor natural de FCON1000 pero el desarrollo es mas complicado dado que se tiene que programar en Python cualquier extension que se quiera agregar.
+
+Finalmente se logro realizar el analisis de datos por medio de ICA, se implementaron scripts para realizar el pre-procesamiento necesario para poder realizar una analisis por ICA usando MELODIC.
 
 \end{document}
